antes del examen, todo hasta bloqueo pesimista